objects/Legacy_Delta__c.object
<CustomObject>
    <description>This Object  is designed to Process the Legacy data to OD SFDC Instance entities like Notes, Events,Task.</description>
    <fields>
        <fullName>CreatedByName__c</fullName>
        <description>This hold the CreatedBy Name of the Legacy record</description>
        <label>CreatedByName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Description__c</fullName>
        <description>This hold the Description of the Event Record</description>
        <label>T_Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_DurationInMinutes__c</fullName>
        <description>This hold the DurationInMinutes of the Event Record</description>
        <label>E_DurationInMinutes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_EndDateTime__c</fullName>
        <description>This hold the EndDateTime of the Event Record</description>
        <label>E_EndDateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_IsAllDayEvent__c</fullName>
        <description>This hold the IsAllDayEvent of the Event Record</description>
        <label>E_IsAllDayEvent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Location__c</fullName>
        <description>This hold the Location of the Event Record</description>
        <label>E_Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_RecurrenceStartDateTime__c</fullName>
        <description>This hold the RecurrenceStartDateTime of the Event Record</description>
        <label>E_RecurrenceStartDateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_ShowAs__c</fullName>
        <description>This hold the ShowAs of the Event Record</description>
        <label>E_ShowAs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_StartDateTime__c</fullName>
        <description>This hold the StartDateTime of the Event Record</description>
        <label>E_StartDateTime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityID__c</fullName>
        <description>This hold the OMXID for this record</description>
        <label>EntityID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityName__c</fullName>
        <description>This hold the Sobject Name</description>
        <label>Entity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Reason__c</fullName>
        <description>Lets us know why the record failed in processing</description>
        <label>Error Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedByName__c</fullName>
        <description>This hold the LastModifiedBy Name of the Legacy record</description>
        <label>LastModifiedByName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>This hold the LastModifiedDate of the Legacy record</description>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>N_Body__c</fullName>
        <description>This hold the Body of the Notes</description>
        <label>N_Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>N_ISPRIVATE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This hold the ISPRIVATE for Notes and Events</description>
        <label>N_ISPRIVATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_Legacy_Created_Date__c</fullName>
        <description>This is Notes Legacy Created Date</description>
        <label>N_Legacy_Created_Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_ParentId_Type__c</fullName>
        <description>This hold the Type(Sobject) to which Notes Has to be Linked to</description>
        <label>N_ParentId_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_ParentId__c</fullName>
        <description>This hold the Raw Parent ID for Notes</description>
        <label>N_ParentId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_Title__c</fullName>
        <description>This hold the Title for Notes</description>
        <label>N_Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_primary_key__c</fullName>
        <description>This holds the Legacy ID of the record</description>
        <label>OMX_primary_key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerRepNumber__c</fullName>
        <description>This hold the Owner&apos;s Rep Number of the Legacy record</description>
        <label>OwnerRepNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ID__c</fullName>
        <description>This is the Created SFDC ID</description>
        <label>SFDC_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Determines the status of the record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_ActivityDate__c</fullName>
        <description>This hold the ActivityDate of the Task and Event Record</description>
        <label>T_ActivityDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_CallDisposition__c</fullName>
        <description>This hold the CallDisposition of the Task Record</description>
        <label>T_CallDisposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_CallDurationInSeconds__c</fullName>
        <description>This hold the CallDurationInSeconds of the Task Record</description>
        <label>T_CallDurationInSeconds</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_CallObject__c</fullName>
        <description>This hold the CallObject of the Task Record</description>
        <label>T_CallObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_CallType__c</fullName>
        <description>This hold the CallType of the Task Record</description>
        <label>T_CallType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_ISRECURRENCE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This hold the ISRECURRENCE of the Task Record</description>
        <label>T_ISRECURRENCE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_IsReminderSet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This hold the IsReminderSet of the Task and Event Record</description>
        <label>T_IsReminderSet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_Priority__c</fullName>
        <description>This hold the Priority of the Task Record</description>
        <label>T_Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_RecordTypeId__c</fullName>
        <description>This hold the RecordTypeId of the Task Record</description>
        <label>T_RecordTypeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceDayOfMonth__c</fullName>
        <description>This hold the RecurrenceDayOfMonth of the Task Record</description>
        <label>T_RecurrenceDayOfMonth</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceDayOfWeekMask__c</fullName>
        <description>This hold the RecurrenceDayOfWeekMask of the Task and Event Record</description>
        <label>T_RecurrenceDayOfWeekMask</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceEndDateOnly__c</fullName>
        <description>This hold the RecurrenceEndDateOnly of the Task and Event Record</description>
        <label>T_RecurrenceEndDateOnly</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceInstance__c</fullName>
        <description>This hold the RecurrenceInstance of the Task and Event Record</description>
        <label>T_RecurrenceInstance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceInterval__c</fullName>
        <description>This hold the RecurrenceInterval of the Task and Event Record</description>
        <label>T_RecurrenceInterval</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceMonthOfYear__c</fullName>
        <description>This hold the RecurrenceMonthOfYear of the Task and Event Record</description>
        <label>T_RecurrenceMonthOfYear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceStartDateOnly__c</fullName>
        <description>This hold the RecurrenceStartDateOnly of the Task Record</description>
        <label>T_RecurrenceStartDateOnly</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceTimeZoneSidKey__c</fullName>
        <description>This hold the RecurrenceTimeZoneSidKey of the Task and Event Record</description>
        <label>T_RecurrenceTimeZoneSidKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_RecurrenceType__c</fullName>
        <description>This hold the RecurrenceType of the Task and Event Record</description>
        <label>T_RecurrenceType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_ReminderDateTime__c</fullName>
        <description>This hold the ReminderDateTime of the Task and Events Record</description>
        <label>T_ReminderDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>T_Status__c</fullName>
        <description>This hold the Status of the Task Record</description>
        <label>T_Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Subject__c</fullName>
        <description>This hold the Subject of the Task and Event Record</description>
        <label>T_Subject</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_WhatId_Type__c</fullName>
        <description>The field is created to capture the type of Object the Task/Event belongs to</description>
        <inlineHelpText>Determines whether the Task belongs to Accounts or Opportunities</inlineHelpText>
        <label>T WhatId Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_WhatId__c</fullName>
        <description>This hold the WhatId of the Task Record</description>
        <label>T_WhatId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_WhoId_Type__c</fullName>
        <description>The field is created to capture the type of Object the Task/Event belongs to</description>
        <inlineHelpText>Determines whether the Task belongs to Leads or Contacts</inlineHelpText>
        <label>T WhoId Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_WhoId__c</fullName>
        <description>This hold the WhoId of the Task Record</description>
        <label>T_WhoId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>This hold the createdDate of the Legacy record</description>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
    <label>Legacy_Delta</label>
    <nameField>
        <label>OMX_Delta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legacy_Delta</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>